# catalog-pii-scanner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
src/catalog_pii_scanner/: __init__.py  api.py  cli.py  config.py  datasets.py  db.py  embeddings.py  ensemble.py  eval.py  logging_utils.py  ner.py  pii_types.py  redaction.py  rules.py  sampler.py
src/catalog_pii_scanner/connectors/: __init__.py  athena.py  glue.py  hms.py  unity.py
tests/: conftest.py  test_api.py  test_athena_sampler.py  test_calibration_edge.py  test_cli.py  test_cli_mvp.py  test_config.py  test_datasets.py  test_ensemble.py  test_glue_backoff.py  test_glue_localstack.py  test_glue_tableinput.py  test_hms_fake.py  test_hms_testcontainers.py  test_jdbc_sampler.py  test_logging.py  test_ner.py  test_redaction.py  test_redaction_tokens.py  test_rules.py  test_rules_advanced.py  test_store.py  test_unity_rest_jdbc.py
