[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-pii-scanner"
version = "0.1.0"
description = "Catalog PII Scanner: Typer CLI and FastAPI stub"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "typer>=0.12.3",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pre-commit>=3.7.0",
  "ruff>=0.4.8",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
  "types-requests>=2.32.0.20240622",
]
ml = [
  "sentence-transformers>=2.5.1",
  "spacy>=3.7.4",
]

[project.urls]
Homepage = "https://example.com/catalog-pii-scanner"
Repository = "https://example.com/catalog-pii-scanner.git"

[project.scripts]
cps = "catalog_pii_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["catalog_pii_scanner*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # Pycodestyle errors
  "F",  # Pyflakes
  "I",  # Import sorting
  "B",  # Bugbear
  "UP", # Pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["catalog_pii_scanner"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
